--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,6 @@
 
 /* https://www.youtube.com/watch?v=OFip2LlKtGY - xampp */
 
-.botao_doacao{
-    background-color: #f44336; /* Cor de fundo do botão */
-    color: white; /* Cor do texto */
-    padding: 10px 20px; /* Espaçamento interno */
-    border: none; /* Sem borda */
-    border-radius: 5px; /* Bordas arredondadas */
-    cursor: pointer; /* Muda o cursor para indicar que é clicável */
-    font-size: 16px; /* Tamanho da fonte */
-    text-align: center; /* Centraliza o texto */
-
-}
-
 h2 {
     text-align: center;
 }
@@ -48,7 +36,7 @@ body {
     position: static;
 }
 .logo{
-    float: left;
+    float: center;
     width: 25%;
     text-align: center;
 }
@@ -122,7 +110,7 @@ section.carrosel{
 .nav-manual, .nav-auto{
     position: absolute;
     width: 100%;
-    bottom: -400px;
+    bottom: -700px;
     display: flex;
     justify-content: center;
 }
